# recipe-unit-converter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/plans/: 2026-02-03-production-ready-package-design.md
src/recipe_unit_converter/: __init__.py  cli.py  converter.py  exceptions.py  matcher.py  models.py  parser.py  repository.py
src/recipe_unit_converter/data/: ingredients.json  units.json
tests/: __init__.py  test_cli.py  test_converter.py  test_coverage_extras.py  test_matcher.py  test_models.py  test_parser.py  test_repository.py
